--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,10 @@ LDAP_BASE_DN="ou=people,dc=university,dc=org"
 LDAP_TIMEOUT=5
 LDAP_SSL=false
 LDAP_TLS=false
+#LDAP_GUID_KEY=entryuuid
+#LDAP_OBJECT_CLASSES=top,person,organizationalperson,inetorgperson
+#LDAP_LOGIN_ATTRIBUTE=cn
+
 # LDAP logging debugging only
 LDAP_LOGGING=false
 
