--- a/.env.example
+++ b/.env.example
@@ -43,12 +43,15 @@ LDAP_BASE_DN="ou=people,dc=university,dc=org"
 LDAP_TIMEOUT=5
 LDAP_SSL=false
 LDAP_TLS=false
-#LDAP_GUID_KEY=entryuuid
-#LDAP_OBJECT_CLASSES=top,person,organizationalperson,inetorgperson
-#LDAP_LOGIN_ATTRIBUTE=cn
 
-# LDAP logging debugging only
-LDAP_LOGGING=false
+# Attribute with GUID; OpenLDAP: 'entryuuid', AD: 'objectGUID'
+#LDAP_GUID_KEY=entryuuid
+
+# Comma seperated list of the object class
+#LDAP_OBJECT_CLASSES=top,person,organizationalperson,inetorgperson
+
+# Attribute by which the user should be found in the LDAP
+#LDAP_LOGIN_ATTRIBUTE=uid
 
 # Login logging
 AUTH_LOG_SUCCESSFUL=true
