--- a/.env.ci
+++ b/.env.ci
@@ -43,18 +43,23 @@ LDAP_BASE_DN="ou=people,dc=university,dc=org"
 LDAP_TIMEOUT=5
 LDAP_SSL=false
 LDAP_TLS=false
+
+# Attribute with GUID; OpenLDAP: 'entryuuid', AD: 'objectGUID'
+#LDAP_GUID_KEY=entryuuid
+
+# Comma seperated list of the object class
+#LDAP_OBJECT_CLASSES=top,person,organizationalperson,inetorgperson
+
+# Attribute by which the user should be found in the LDAP
+#LDAP_LOGIN_ATTRIBUTE=uid
+
 # LDAP logging debugging only
 LDAP_LOGGING=false
-# LDAP role mapping, to disable keep LDAP_ROLE_ATTRIBUTE empty
-# Attribute with the users role, can be a multi value attribute
-LDAP_ROLE_ATTRIBUTE=memberOf
-# Map the attribute to the name of a local role, defined as json array, ldap role is key, pilos role is value
-LDAP_ROLE_MAP='{"cn=staff,ou=groups,dc=university,dc=org":"staff","cn=students,ou=groups,dc=university,dc=org":"students"}'
 
 # Login logging
 AUTH_LOG_SUCCESSFUL=false
 AUTH_LOG_FAILED=false
-AUTH_LOG_LDAP_ROLES=false
+AUTH_LOG_ROLES=false
 
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 # Available languages for the language picker
