--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
           - './storage/logs:/var/www/html/storage/logs'
           - './storage/app:/var/www/html/storage/app'
           - './resources/custom:/var/www/html/resources/custom'
+          - './app/Auth/config:/var/www/html/app/Auth/config'
           - './public/images/custom:/var/www/html/public/images/custom'
           - './resources/sass/theme/custom:/var/www/html/resources/sass/theme/custom'
         depends_on:
