--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
         "ext-json": "*",
         "anlutro/l4-settings": "^1.0.0",
         "bensampo/laravel-enum": "^6.0",
@@ -20,7 +21,7 @@
         "laravel/ui": "^4.0",
         "littleredbutton/bigbluebutton-api-php": "^4.2.0",
         "maatwebsite/excel": "^3.1",
-      "ext-curl": "*"
+        "sentry/sentry-laravel": "^3.3"
     },
     "require-dev": {
         "ext-simplexml": "*",
@@ -43,6 +44,9 @@
         "sort-packages": true,
         "platform": {
           "php": "8.1"
+        },
+        "allow-plugins": {
+            "php-http/discovery": true
         }
     },
     "extra": {
