--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.2",
+        "@sentry/vue": "^7.40.0",
         "awesome-mask": "^1.1.1",
         "bootstrap-vue": "^2.15.0",
         "chart.js": "^2.9.4",
