--- a/.env.example
+++ b/.env.example
@@ -43,8 +43,11 @@ LDAP_TIMEOUT=5
 LDAP_SSL=false
 LDAP_TLS=false
 
-# Attribute with GUID; OpenLDAP: 'entryuuid', AD: 'objectGUID'
-#LDAP_GUID_KEY=entryuuid
+# Query the users attributes using the users own credentials
+#LDAP_LOAD_ATTRIBUTES_AS_USER=false
+
+# Raw LDAP filter to restrict the user search
+#LDAP_FILTER=
 
 # Comma seperated list of the object class
 #LDAP_OBJECT_CLASSES=top,person,organizationalperson,inetorgperson
