Revert removal of .env option

--- a/.env.ci
+++ b/.env.ci
@@ -49,6 +49,9 @@ LDAP_TLS=false
 # Raw LDAP filter to restrict the user search
 #LDAP_FILTER=
 
+# Attribute with GUID; OpenLDAP: 'entryuuid', AD: 'objectGUID'
+#LDAP_GUID_KEY=entryuuid
+
 # Comma seperated list of the object class
 #LDAP_OBJECT_CLASSES=top,person,organizationalperson,inetorgperson
 
