--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,12 @@ LDAP_TIMEOUT=5
 LDAP_SSL=false
 LDAP_TLS=false
 
+# Query the users attributes using the users own credentials
+#LDAP_LOAD_ATTRIBUTES_AS_USER=false
+
+# Raw LDAP filter to restrict the user search
+#LDAP_FILTER=
+
 # Attribute with GUID; OpenLDAP: 'entryuuid', AD: 'objectGUID'
 #LDAP_GUID_KEY=entryuuid
 
