Disable local auth

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,9 @@ AUTH_LOG_SUCCESSFUL=true
 AUTH_LOG_FAILED=true
 AUTH_LOG_ROLES=false
 
+# Enable local authentication
+LOCAL_AUTH_ENABLED=true
+
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 # Available languages for the language picker
 VITE_AVAILABLE_LOCALES=en,de
