--- a/.env.ci
+++ b/.env.ci
@@ -66,6 +66,9 @@ AUTH_LOG_SUCCESSFUL=false
 AUTH_LOG_FAILED=false
 AUTH_LOG_ROLES=false
 
+# Enable local authentication
+LOCAL_AUTH_ENABLED=true
+
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 # Available languages for the language picker
 VITE_AVAILABLE_LOCALES=en,de
