--- a/package.json
+++ b/package.json
@@ -46,9 +46,19 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.2",
+        "@tiptap/extension-color": "^2.0.0-beta.196",
+        "@tiptap/extension-highlight": "^2.0.0-beta.196",
+        "@tiptap/extension-image": "^2.0.0-beta.196",
+        "@tiptap/extension-link": "^2.0.0-beta.196",
+        "@tiptap/extension-text-align": "^2.0.0-beta.196",
+        "@tiptap/extension-text-style": "^2.0.0-beta.196",
+        "@tiptap/extension-underline": "^2.0.0-beta.196",
+        "@tiptap/starter-kit": "^2.0.0-beta.196",
+        "@tiptap/vue-2": "^2.0.0-beta.196",
         "awesome-mask": "^1.1.1",
         "bootstrap-vue": "^2.15.0",
         "chart.js": "^2.9.4",
+        "dompurify": "^3.0.1",
         "pinia": "^2.0.27",
         "ua-parser-js": "^1.0.32",
         "vue-chartjs": "^3.5.1",
