--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,16 @@
         "ext-simplexml": "*",
         "barryvdh/laravel-ide-helper": "^2.7",
         "brianium/paratest": "^7.0",
-        "spatie/laravel-ignition": "^2.0",
-        "friendsofphp/php-cs-fixer": "3.*",
         "fakerphp/faker": "^1.9.1",
+        "friendsofphp/php-cs-fixer": "3.*",
         "laravel/sail": "^1.14",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^7.0",
         "php-coveralls/php-coveralls": "^2.3.0",
         "phpunit/phpunit": "^10.0",
+        "spatie/laravel-ignition": "^2.0",
         "squizlabs/php_codesniffer": "3.*",
+        "symfony/var-exporter": "^6.2",
         "timacdonald/log-fake": "^2.0.1"
     },
     "config": {
