--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -16,7 +16,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update \
     && apt-get install -y gnupg gosu curl ca-certificates zip unzip pv libzip-dev git supervisor libcap2-bin libpng-dev python2 \
-    && apt-get install -y apache2 libapache2-mod-xsendfile \
+    && apt-get install -y nginx \
     && apt-get install -y default-mysql-client libpq-dev \
     && apt-get install -y libldap2-dev \
     && apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev  \
@@ -39,9 +39,6 @@ RUN chown www-data:www-data /var/www/
 RUN usermod -u $WWWUSER www-data
 RUN groupmod -o -g $WWWGROUP www-data
 
-# Enable PHP modules
-RUN a2enmod rewrite headers alias proxy proxy_fcgi ssl
-
 # Copy start script
 COPY ./docker/app/entrypoint /usr/local/bin/entrypoint
 RUN chmod +x /usr/local/bin/entrypoint
@@ -58,9 +55,18 @@ RUN chown www-data:www-data /usr/local/etc/frontend/
 # Copy supervisor config
 COPY ./docker/app/supervisord/ /etc/supervisor/conf.d
 
-# Copy apache default site conf
-COPY ./docker/app/apache/sites-enabled /etc/apache2/sites-enabled
-COPY ./docker/app/apache/sites-common /etc/apache2/sites-common
+# Enable nginx site
+COPY ./docker/app/nginx/sites-available /etc/nginx/sites-available
+COPY ./docker/app/nginx/nginx.conf /etc/nginx/nginx.conf
+COPY ./docker/app/nginx/snippets-available /etc/nginx/snippets-available
+RUN rm /etc/nginx/sites-enabled/default
+RUN ln -s /etc/nginx/sites-available/default /etc/nginx/sites-enabled/default
+
+
+# set limits
+RUN echo 'www-data soft nofile 65535' >> /etc/security/limits.conf
+RUN echo 'www-data hard nofile 65535' >> /etc/security/limits.conf
+RUN echo 'ULIMIT="-n 65535"' >> /etc/default/nginx
 
 # Copy php config files
 COPY ./docker/app/php/zz-docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
