--- a/docker/app/supervisord/supervisord.conf
+++ b/docker/app/supervisord/supervisord.conf
@@ -15,8 +15,8 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-[program:apache2]
-command=apache2ctl -DFOREGROUND
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
 user=root
 autostart=true
 autorestart=true
