--- a/docker/app/nginx/nginx.conf
+++ b/docker/app/nginx/nginx.conf
@@ -55,8 +55,8 @@ http {
         # Logging Settings
         ##
 
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
+        access_log /dev/stdout;
+        error_log /dev/stderr warn;
 
         ##
         # Gzip Settings
