Add logging and laravel telescope

--- a/docker/app/php/zz-docker.conf
+++ b/docker/app/php/zz-docker.conf
@@ -1,6 +1,7 @@
 [global]
 daemonize = no
-error_log = /dev/stderr
+; https://github.com/docker-library/php/blob/86b8b13760c7d7c6120fb635f6a1c84b22f33386/8.1/bullseye/fpm/Dockerfile#L245
+error_log = /proc/self/fd/2
 
 ; ############################################################
 ; Backlog configuration
@@ -37,8 +38,9 @@ pm = static
 ; The number of child processes to be created when pm is set to 'static'
 pm.max_children = 100
 
-
 pm.status_path = /status
 pm.status_listen = 81
 
-access.log = /dev/stdout
+; Ensure worker stdout and stderr are sent to the main error log.
+catch_workers_output = yes
+decorate_workers_output = no
