--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "brianium/paratest": "^7.0",
         "fakerphp/faker": "^1.9.1",
         "friendsofphp/php-cs-fixer": "3.*",
+        "laravel/telescope": "^4.15",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^7.0",
         "php-coveralls/php-coveralls": "^2.3.0",
@@ -42,12 +43,16 @@
         "sort-packages": true,
         "platform": {
           "php": "8.1"
+        },
+        "allow-plugins": {
+            "php-http/discovery": true
         }
     },
     "extra": {
         "laravel": {
             "dont-discover": [
-                "directorytree/ldaprecord-laravel"
+                "directorytree/ldaprecord-laravel",
+                "laravel/telescope"
             ]
         }
     },
