Change default log channel

--- a/.env.ci
+++ b/.env.ci
@@ -7,8 +7,11 @@ APP_URL=http://localhost
 
 SESSION_LIFETIME=120
 
-# For production daily recommended
-LOG_CHANNEL=stack
+# Log to docker logs
+# If logging to file is needed change to 'stack' or 'daily' and mount the log directory ('storage/logs') to the host
+LOG_CHANNEL=stderr
+# Log level: debug, info, notice, warning, error, critical, alert, emergency
+LOG_LEVEL=debug
 
 # Database config
 DB_CONNECTION=mysql
