Change log channel for CI

--- a/.env.ci
+++ b/.env.ci
@@ -9,7 +9,7 @@ SESSION_LIFETIME=120
 
 # Log to docker logs
 # If logging to file is needed change to 'stack' or 'daily' and mount the log directory ('storage/logs') to the host
-LOG_CHANNEL=stderr
+LOG_CHANNEL=stack
 # Log level: debug, info, notice, warning, error, critical, alert, emergency
 LOG_LEVEL=debug
 
