--- a/.env.ci
+++ b/.env.ci
@@ -169,3 +169,7 @@ VITEST_UI_PORT=1074
 # Only takes effect when building the container (sail build)
 WWWGROUP=1000
 WWWUSER=1000
+
+# Timeout for the BBB server in seconds
+BBB_SERVER_TIMEOUT=30
+BBB_SERVER_CONNECT_TIMEOUT=30
