Add logging and laravel telescope (#381)
* Add logging and laravel telescope

* Change default log channel

* Update docs

* Update changelog

* Implement Laravel HTTP Client for BBB API

* Change log channel for CI

* Add catch for server connection error

* Add timeout to BBB tests

* Add connection timeout

* Remove BBB mockery, replace with laravel http mock

* Code cleanup

* Add test

* Revert "Add catch for server connection error"

This reverts commit 0974232b8de6135374b153586c26f1ea6aba90a8.

* Improve log messages

* Improve log messages

--- a/.env.ci
+++ b/.env.ci
@@ -7,8 +7,11 @@ APP_URL=http://localhost
 
 SESSION_LIFETIME=120
 
-# For production daily recommended
+# Log to docker logs
+# If logging to file is needed change to 'stack' or 'daily' and mount the log directory ('storage/logs') to the host
 LOG_CHANNEL=stack
+# Log level: debug, info, notice, warning, error, critical, alert, emergency
+LOG_LEVEL=debug
 
 # Database config
 DB_CONNECTION=mysql
@@ -166,3 +169,7 @@ VITEST_UI_PORT=1074
 # Only takes effect when building the container (sail build)
 WWWGROUP=1000
 WWWUSER=1000
+
+# Timeout for the BBB server in seconds
+BBB_SERVER_TIMEOUT=30
+BBB_SERVER_CONNECT_TIMEOUT=30
