--- a/docker/app/php/zz-docker.conf
+++ b/docker/app/php/zz-docker.conf
@@ -32,7 +32,7 @@ listen.mode = 0660
 
 ; Choose how the process manager will control the number of child processes.
 ; static  - a fixed number (pm.max_children) of child processes; maximum performance
-;  
+;
 pm = static
 
 ; The number of child processes to be created when pm is set to 'static'
@@ -41,6 +41,8 @@ pm.max_children = 100
 pm.status_path = /status
 pm.status_listen = 81
 
+
+access.log = /var/log/php/access.log
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
 decorate_workers_output = no
