--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@vue/test-utils": "^1.3.6",
         "axe-core": "^4.3.5",
         "axios": "^1.4.0",
+        "axios-mock-adapter": "^1.21.5",
         "bootstrap": "^4.6.1",
         "canvas": "^2.10.2",
         "eslint": "^8.44.0",
@@ -33,7 +34,6 @@
         "jsdom": "^16.7.0",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
-        "moxios": "^0.4.0",
         "mutationobserver-shim": "^0.3.7",
         "popper.js": "^1.12",
         "resolve-url-loader": "^5.0.0",
