--- a/.eslintignore
+++ b/.eslintignore
@@ -2,7 +2,7 @@
 /public/hot
 /public/storage
 /resources/custom
-/storage/*.key
+/storage
 /vendor
 /coverage
 .env
@@ -17,3 +17,4 @@ package.json
 /public
 /db
 /ssl
+/bbb-playback
