--- a/docker/app/supervisord/supervisord.conf
+++ b/docker/app/supervisord/supervisord.conf
@@ -37,3 +37,18 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:worker]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/html/artisan queue:work
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+user=www-data
+numprocs=8
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+stopwaitsecs=3600
