--- a/.env.ci
+++ b/.env.ci
@@ -66,7 +66,7 @@ LDAP_LOGGING=false
 
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 # Available languages for the language picker
-VITE_AVAILABLE_LOCALES=en,de
+VITE_AVAILABLE_LOCALES=en,de,fr
 # Default language
 VITE_DEFAULT_LOCALE=en
 # Theme (resources/sass/theme/)
