fix-cs, rename pagination setting, ui improvement

--- a/.env.ci
+++ b/.env.ci
@@ -105,8 +105,8 @@ DEFAULT_FAVICON=/images/favicon.ico
 DEFAULT_ROOM_LIMIT=-1
 # Global length of paginated lists
 DEFAULT_PAGINATION_PAGE_SIZE=15
-# Length of the paginated list of the own and shared rooms
-OWN_ROOMS_PAGINATION_PAGE_SIZE=5
+# Length of the paginated list of the rooms
+ROOM_PAGINATION_PAGE_SIZE=9
 # Allow users to self reset password
 PASSWORD_SELF_RESET_ENABLED=false
 # Link lifetime for password reset email
