Fix commit message on locale github action

--- a/.github/workflows/pull-locales.yml
+++ b/.github/workflows/pull-locales.yml
@@ -79,9 +79,8 @@ jobs:
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v5
       with:
-        commit_message: Update locales
+        commit-message: Update locales
         add-paths: 'lang/**/*.php'
-        push_options: --force
         branch: update-locales
         title: Update locales using POEditor
         body: This PR was automatically created using the most recent translations from POEditor.
