--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,8 @@ LDAP_TLS=false
 # Attribute by which the user should be found in the LDAP
 #LDAP_LOGIN_ATTRIBUTE=uid
 
+# Enable local authentication
+LOCAL_AUTH_ENABLED=true
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 # Available languages for the language picker
 VITE_AVAILABLE_LOCALES=en,de,fr
