--- a/.env.example
+++ b/.env.example
@@ -101,8 +101,8 @@ DEFAULT_ROOM_LIMIT=-1
 DEFAULT_PAGINATION_PAGE_SIZE=15
 # Length of the paginated list of the own and shared rooms
 OWN_ROOMS_PAGINATION_PAGE_SIZE=5
-# Allow users to self reset password
-PASSWORD_SELF_RESET_ENABLED=false
+# Allow users to change / reset their password
+PASSWORD_CHANGE_ALLOWED=true
 # Link lifetime for password reset email
 PASSWORD_RESET_EXPIRE=60
 
