Add option to disable local authentication (#506)
* Add option to disable local auth.

* Disable local auth. routes and UI features

* Add tests

* Refactor disable routes

* Update changelog

* Rename .env option

---------

Co-authored-by: Daniel Machill <141118462+danielmachill@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,8 @@ LDAP_TLS=false
 # Attribute by which the user should be found in the LDAP
 #LDAP_LOGIN_ATTRIBUTE=uid
 
+# Enable local authentication
+LOCAL_AUTH_ENABLED=true
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 # Available languages for the language picker
 VITE_AVAILABLE_LOCALES=en,de,fr
@@ -99,8 +101,8 @@ DEFAULT_ROOM_LIMIT=-1
 DEFAULT_PAGINATION_PAGE_SIZE=15
 # Length of the paginated list of the own and shared rooms
 OWN_ROOMS_PAGINATION_PAGE_SIZE=5
-# Allow users to self reset password
-PASSWORD_SELF_RESET_ENABLED=false
+# Allow users to change / reset their password
+PASSWORD_CHANGE_ALLOWED=true
 # Link lifetime for password reset email
 PASSWORD_RESET_EXPIRE=60
 
