Add shibb config to .env files

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,9 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=admin@domain.tld
 MAIL_FROM_NAME="${APP_NAME}"
 
+# Enable local authentication
+LOCAL_AUTH_ENABLED=true
+
 # LDAP config
 LDAP_ENABLED=false
 LDAP_HOST=openldap
@@ -61,8 +64,12 @@ LDAP_TLS=false
 # Attribute by which the user should be found in the LDAP
 #LDAP_LOGIN_ATTRIBUTE=uid
 
-# Enable local authentication
-LOCAL_AUTH_ENABLED=true
+# LDAP logging debugging only
+LDAP_LOGGING=false
+
+# Enable Shibboleth authentication
+SHIBBOLETH_ENABLED=false
+
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 # Available languages for the language picker
 VITE_AVAILABLE_LOCALES=en,de,fr
