--- a/.env.ci
+++ b/.env.ci
@@ -34,6 +34,9 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=admin@domain.tld
 MAIL_FROM_NAME="${APP_NAME}"
 
+# Enable local authentication
+LOCAL_AUTH_ENABLED=true
+
 # LDAP config
 LDAP_ENABLED=false
 LDAP_HOST=openldap
@@ -63,8 +66,10 @@ LDAP_TLS=false
 
 # LDAP logging debugging only
 LDAP_LOGGING=false
-# Enable local authentication
-LOCAL_AUTH_ENABLED=true
+
+# Enable Shibboleth authentication
+SHIBBOLETH_ENABLED=false
+
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 # Available languages for the language picker
 VITE_AVAILABLE_LOCALES=en,de,fr
