--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -64,3 +64,9 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=pilos/pilos:buildcache
           cache-to: type=registry,ref=pilos/pilos:buildcache,mode=max
+      - name: Upload npm logs
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: npm-debug.log
+          path: /var/www/.npm/_logs/*.log
