--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,19 @@ name: CI
 on:
   push:
     branches: [ master ]
-  pull_request:
+  pull_request_target:
 jobs:
+  authorize:
+    environment:
+      ${{ github.event_name == 'pull_request_target' &&
+      github.event.pull_request.head.repo.full_name != github.repository &&
+      'external' || 'internal' }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: true
+  
   pilos-backend:
+    needs: authorize
     name: Backend (PHP ${{ matrix.php-versions }})
     runs-on: ubuntu-latest
 
@@ -30,6 +40,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 2
+        ref: ${{ github.event.pull_request.head.sha || github.ref }}
     - name: Verify MariaDB connection
       env:
         PORT: ${{ job.services.mariadb.ports[3306] }}
@@ -96,11 +107,15 @@ jobs:
         name: ${{ runner.os }}-${{ matrix.php-versions }}-laravel.log
         path: storage/logs/laravel.log
   pilos-frontend:
+          needs: authorize
           name: Frontend
           runs-on: ubuntu-latest
           steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
+              with:
+                fetch-depth: 2
+                ref: ${{ github.event.pull_request.head.sha || github.ref }}
             - name: Copy .env
               run: php -r "copy('.env.example', '.env');"
             - name: Get NPM Cache Directory
