Refactor CI to use B3Scale

--- a/.env.ci
+++ b/.env.ci
@@ -169,3 +169,7 @@ WWWUSER=1000
 # Timeout for the BBB server in seconds
 BBB_SERVER_TIMEOUT=30
 BBB_SERVER_CONNECT_TIMEOUT=30
+
+TELESCOPE_ENABLED=false
+
+TESTING_BBB=
