--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [ master ]
   pull_request:
+
+permissions:
+  id-token: write   
+
 jobs:
   pilos-backend:
     name: Backend (PHP ${{ matrix.php-versions }})
@@ -28,7 +32,8 @@ jobs:
     steps:
     - name: Github OIDC
       run: |
-        curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=api://BBB-Testing-Backend"
+        value=$(curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=api://BbbTestServer" | jq '.value')
+        echo "$value"
     - name: Setup B3Scale
       run: |
         curl -L https://github.com/b3scale/b3scale/releases/download/1.0.2/b3scalectl_1.0.2_linux_amd64.tar.gz | tar -xz
