--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,7 @@ jobs:
       run: |
         BBB_CREDENTIALS=$(curl -s -X POST https://bbb-test.pilos-thm.de/cred-server/api/frontend -H 'Accept: application/json' -H 'Content-Type: application/json' -d "{ \"github_token\": \"${{ secrets.GITHUB_TOKEN }}\", \"run_id\": \"${{ github.run_id }}\", \"attempt_number\": \"${{ github.run_attempt }}\", \"repository\": \"${{ github.repository }}\"}")
         TESTING_BBB="'[$BBB_CREDENTIALS]'"
+        echo $TESTING_BBB
         sed -i "s|TESTING_BBB=.*|TESTING_BBB=$TESTING_BBB|g"  .env
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       timeout-minutes: 5
