--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,11 @@ DB_DATABASE=app
 DB_USERNAME=user
 DB_PASSWORD=password
 
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=database
+
+# Redis config (see config/database.php for more options)
+REDIS_HOST=redis
 
 # Email config
 MAIL_MAILER=smtp
