--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -37,6 +37,11 @@ services:
         test: [ "CMD", "mysqladmin", "ping", "-u${DB_USERNAME}", "-p${DB_PASSWORD}" ]
         retries: 3
         timeout: 5s
+    redis:
+      image: redis:7.2-alpine3.18
+      restart: unless-stopped
+      volumes:
+        - redis:/data
     mailhog:
       image: 'mailhog/mailhog:latest'
       ports:
@@ -72,3 +77,5 @@ services:
 volumes:
   mariadb:
     driver: local
+  redis:
+    driver: local  
