--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,9 @@ services:
         test: [ "CMD", "mysqladmin", "ping", "-u${DB_USERNAME}", "-p${DB_PASSWORD}" ]
         retries: 3
         timeout: 5s
+    redis:
+      image: redis:7.2-alpine3.18
+      restart: unless-stopped
+      volumes:
+        - ./redis/data:/data
+    
