--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ DB_USERNAME=user
 DB_PASSWORD=password
 
 CACHE_DRIVER=redis
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
 # Redis config (see config/database.php for more options)
 REDIS_HOST=redis
