Revert "Disable caching"
This reverts commit fa8dbcff3fba02bccbe1d45bd022852da8b926b8.

--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -58,5 +58,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-#          cache-from: type=registry,ref=pilos/pilos:buildcache
-#          cache-to: type=registry,ref=pilos/pilos:buildcache,mode=max
+          cache-from: type=registry,ref=pilos/pilos:buildcache
+          cache-to: type=registry,ref=pilos/pilos:buildcache,mode=max
