--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "goldspecdigital/laravel-eloquent-uuid": "^10",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^10.0",
+        "laravel/horizon": "^5.21",
         "laravel/sanctum": "^v3.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^4.0",
@@ -80,6 +81,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "test": "php artisan test --parallel",
         "test-ci": "php artisan test --parallel --testsuite=Unit,Feature",
