--- a/docker/app/supervisord/supervisord.conf
+++ b/docker/app/supervisord/supervisord.conf
@@ -33,7 +33,15 @@ command=/usr/local/etc/scheduler/run.sh
 user=www-data
 autostart=true
 startsecs=1
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+redirect_stderr=true
+stdout_logfile=/var/www/html/storage/logs/scheduler.log
+
+[program:horizon]
+process_name=%(program_name)s
+command=php /var/www/html/artisan horizon
+autostart=true
+autorestart=true
+user=www-data
+redirect_stderr=true
+stdout_logfile=/var/www/html/storage/logs/horizon.log
+stopwaitsecs=3600
