--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "goldspecdigital/laravel-eloquent-uuid": "^10",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^10.0",
+        "laravel/prompts": "^0.1.13",
         "laravel/sanctum": "^v3.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^4.0",
