--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,19 +10,45 @@ services:
           - .env
         environment:
           TRUSTED_PROXIES: "*"
+          PHP_PM_MAX_CHILDREN: "100"
         volumes:
           - './storage/:/var/www/html/storage/'
           - './resources/custom:/var/www/html/resources/custom'
           - './app/Auth/config:/var/www/html/app/Auth/config'
           - './public/images/custom:/var/www/html/public/images/custom'
+          - './public/build:/var/www/html/public/build'
           - './resources/sass/theme/custom:/var/www/html/resources/sass/theme/custom'
         sysctls:
           net.core.somaxconn: 65536
           net.ipv4.ip_local_port_range: "2000 65535"
           net.ipv4.tcp_tw_reuse: 1
           net.ipv4.tcp_fin_timeout: 30
+        healthcheck:
+          test: curl --fail http://localhost/health || exit 1
+          interval: 10s
+          retries: 6  
+          timeout: 5s
         depends_on:
-          - db
+          db:
+            condition: service_healthy
+          redis:
+            condition: service_healthy
+    task:
+        image: pilos/pilos:local-dev
+        env_file:
+          - .env
+        depends_on:
+          app:
+            condition: service_healthy
+        entrypoint: ["su", "www-data", "-s", "/bin/bash", "-c", "php artisan schedule:work"]
+    horizon:
+        image: pilos/pilos:local-dev
+        env_file:
+          - .env
+        depends_on:
+          app:
+            condition: service_healthy
+        entrypoint: ["su", "www-data", "-s", "/bin/bash", "-c", "php artisan horizon"]
     db:
       image: 'mariadb:10'
       environment:
@@ -34,11 +60,17 @@ services:
         - './db:/var/lib/mysql'
       healthcheck:
         test: [ "CMD", "mysqladmin", "ping", "-u${DB_USERNAME}", "-p${DB_PASSWORD}" ]
-        retries: 3
+        interval: 10s
+        retries: 6
         timeout: 5s
     redis:
       image: redis:7.2-alpine3.18
       restart: unless-stopped
       volumes:
         - ./redis/data:/data
+      healthcheck:
+        test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+        interval: 10s
+        retries: 6  
+        timeout: 5s
     
