Add global event emitter / pubsub (mitt)
Backport from #681

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "dayjs": "^1.11.10",
         "dompurify": "^3.0.6",
         "maska": "^2.1.10",
+        "mitt": "^3.0.1",
         "pinia": "^2.1.7",
         "ua-parser-js": "^1.0.37",
         "vue": "3.3.4",
