--- a/.env.example
+++ b/.env.example
@@ -70,7 +70,7 @@ LDAP_LOGGING=false
 # Enable Shibboleth authentication
 SHIBBOLETH_ENABLED=false
 
-# Available locales
+# Enabled locales
 # Comma separated list, e.g. de,en
 # If unset all available locales are enabled (lang + resources/custom/lang)
 #ENABLED_LOCALES=de,en
