--- a/package.json
+++ b/package.json
@@ -13,23 +13,22 @@
     "devDependencies": {
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
         "@pinia/testing": "^0.1.3",
-        "@vitejs/plugin-vue2": "^2.1.0",
+        "@vitejs/plugin-vue": "^4.4.1",
         "@vitest/coverage-istanbul": "^0.34.6",
         "@vitest/ui": "^0.34.6",
-        "@vue/test-utils": "^1.3.6",
         "axe-core": "^4.8.2",
-        "axios": "^1.6.0",
+        "axios": "^1.6.1",
         "axios-mock-adapter": "^1.22.0",
         "bootstrap": "^4.6.1",
         "canvas": "^2.10.2",
-        "eslint": "^8.52.0",
+        "eslint": "^8.53.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-jsonc": "^2.10.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-vitest-globals": "^1.4.0",
-        "eslint-plugin-vue": "^9.18.0",
+        "eslint-plugin-vue": "^9.18.1",
         "jsdom": "^22.1.0",
         "laravel-vite-plugin": "^0.8.1",
         "lodash": "^4.17.19",
@@ -39,9 +38,7 @@
         "sass": "^1.69.5",
         "vite": "^4.5.0",
         "vitest": "^0.34.6",
-        "vue": "^2.7.14",
-        "vue-axe": "^2.4.4",
-        "vue-template-compiler": "^2.7.14"
+        "vue-axe": "^3.1.2"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.2",
@@ -53,8 +50,9 @@
         "@tiptap/extension-text-style": "^2.1.11",
         "@tiptap/extension-underline": "^2.1.11",
         "@tiptap/starter-kit": "^2.1.11",
-        "@tiptap/vue-2": "^2.1.12",
-        "bootstrap-vue": "^2.15.0",
+        "@tiptap/vue-3": "^2.1.12",
+        "@vue/compat": "3.3.4",
+        "bootstrap-vue": "^2.23.0",
         "chart.js": "^4.4.0",
         "chartjs-adapter-dayjs-4": "^1.0.4",
         "dayjs": "^1.11.10",
@@ -62,13 +60,13 @@
         "maska": "^2.1.10",
         "mitt": "^3.0.1",
         "pinia": "^2.1.7",
-        "ua-parser-js": "^1.0.36",
+        "ua-parser-js": "^1.0.37",
+        "vue": "3.3.4",
         "vue-chartjs": "^5.2.0",
-        "vue-cropperjs": "^4.2.0",
-        "vue-frag": "^1.4.0",
-        "vue-i18n": "^8.26.8",
-        "vue-multiselect": "^2.1.8",
-        "vue-router": "^3.2.0"
+        "vue-cropperjs": "^5.0.0",
+        "vue-i18n": "^9.0",
+        "vue-multiselect": "^3.0.0-beta.3",
+        "vue-router": "^4.2.5"
     },
     "engines": {
         "node": "^10.12.0 || >=12.0.0"
